Fix broken links

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,6 +4,8 @@ I work as a Software Engineer specializing in Data and Machine Learning.
 If you wish to connect with me, please visit
 [my personal website][personal-website].
 
+[personal-website]: https://dev-tau-seven.vercel.app/
+
 "Things I do" serves as my personal wisdom knowledge site, where I share my past
 accomplishments, ongoing activities, and future aspirations. It provides
 insights into the things I have done, currently engage in, and plan to pursue.
