Fix broken links

--- a/pages/languages/index.mdx
+++ b/pages/languages/index.mdx
@@ -12,7 +12,7 @@ actively documenting my language learning journey with the ultimate objective of
 successfully passing the Norwegian Language Exam. You can track my progress and
 delve into my experiences by visiting [this link][norwegian-language-exam-journey].
 
-[norwegian-language-exam-journey]: languages/norwegian/norwegian-language-exam-journey.md
+[norwegian-language-exam-journey]: languages/norwegian/norwegian-language-exam-journey
 
 Regarding my German proficiency, although I studied it for eight years, my
 current level only allows me to comprehend simple texts and express basic
