--- a/pages/languages/norwegian/norwegian-language-exam-journey.mdx
+++ b/pages/languages/norwegian/norwegian-language-exam-journey.mdx
@@ -4,23 +4,20 @@ import { Tab, Tabs } from 'nextra-theme-docs'
 
 I am determined to obtain a Norwegian Passport in the future, which makes
 learning Norwegian an absolute necessity for me. In order to demonstrate my
-proficiency in the language, I need to successfully pass the
-[Norwegian Language Test][norwegian-language-test]. The purpose of this page
-is to chronicle my journey and share my experiences in learning Norwegian.
+proficiency in the language, I need to successfully pass the Norwegian Language
+Test[^1]. The purpose of this page is to chronicle my journey and share my
+experiences in learning Norwegian.
 
-[norwegian-language-test]: https://www.kompetansenorge.no/tests/norwegian-language-test/about-the-test/
+[^1]: https://www.kompetansenorge.no/tests/norwegian-language-test/about-the-test/
 
 For applicants seeking Norwegian Permanent Residence permit or Norwegian
 Citizenship, it is mandatory to have successfully completed all four sections
 of the Norwegian language test, namely oral, listening, reading, and written
-presentation. The minimum required level is A2 for the Permanent Residence
-permit and B1 for citizenship.
+presentation. The minimum required level is A2 for the Permanent Residence[^2]
+permit and B1 for citizenship[^3].
 
-(Source: [Residence Permit Requirements][residence-permit-requirements] and
-[Citizenship Requirements][citizenship-requirements]).
-
-[residence-permit-requirements]: https://udi.no/en/word-definitions/training-and-tests-in-the-norwegian-language-for-people-applying-for-a-permanent-residence-permit
-[citizenship-requirements]: https://udi.no/en/want-to-apply/citizenship/citizenship-for-people-who-hold-a-residence-permit-in-norway/
+[^2]: https://udi.no/en/word-definitions/training-and-tests-in-the-norwegian-language-for-people-applying-for-a-permanent-residence-permit
+[^3]: https://udi.no/en/want-to-apply/citizenship/citizenship-for-people-who-hold-a-residence-permit-in-norway/
 
 ## Starting Point
 
@@ -78,7 +75,7 @@ advice from ChatGPT to provide me with some guidance on how to proceed.
         variety of audio materials, including podcasts, news broadcasts,
         and online videos.
 
-        - Start by listening to the podcast [Sråktalk][spraktalk-podcast].
+        - Start by listening to the podcast [Språktalk][spraktalk-podcast].
         - Practice understanding spoken instructions, conversations, and
           dialogues by listening to audio exercises and answering
           comprehension questions.
