--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -1,4 +1,5 @@
 import { Analytics } from "@vercel/analytics/react";
+import '../style.css'
 
 export default function App({ Component, pageProps }) {
     return (
