--- a/pages/languages/norwegian/_meta.json
+++ b/pages/languages/norwegian/_meta.json
@@ -1,3 +1,4 @@
 {
-    "index": "Introduction"
+    "index": "Introduction",
+    "practicing-text-understanding-with-chat-gpt": "ChatGPT as an assitant for text understanding"
 }
